Change implementation of UrlUtils to use the URI and URL classes better.